--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,14 @@
+2017-01-06  Justin Squirek  <squirek@adacore.com>
+
+	* exp_attr.adb (Expand_N_Attribute_Reference): Add entry for
+	expansion of Finalization_Size attribute.
+	* sem_attr.adb (Analyze_Attribute): Add entry to check the
+	semantics of Finalization_Size.
+	(Eval_Attribute): Add null entry for Finalization_Size.
+	* sem_attr.ads: Add Finalization_Size to the implementation
+	dependent attribute list.
+	* snames.ads-tmpl: Add name entry for Finalization_Size attribute.
+
 2017-01-06  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_ch5.adb (Analyze_Loop_Statement): If the loop includes an
