--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,18 @@
 2017-01-06  Ed Schonberg  <schonberg@adacore.com>
 
+	* checks.adb (Ensure_Valid): Do not generate a validity check
+	within a generated predicate function, validity checks will have
+	been applied earlier when required.
+
+2017-01-06  Tristan Gingold  <gingold@adacore.com>
+
+	* s-tpoben.ads (Protection_Entries): Add comment and reorder
+	components for performances.
+	* s-tpobop.adb (PO_Do_Or_Queue): Implement Max_Queue_Length runtime
+	semantic.
+
+2017-01-06  Ed Schonberg  <schonberg@adacore.com>
+
 	* sem_eval.adb (Check_Expression_Against_Static_Predicate):
 	If expression is compile-time known and obeys a static predicate
 	it must be labelled as static, to prevent spurious warnings and
