--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-06  Yannick Moy  <moy@adacore.com>
+
+	* sem_attr.adb (Analyze_Attribute/Attribute_Loop_Entry): Analyze node
+	in tree, which means not analyzing the previous prefix if the node has
+	been rewritten into its prefix.
+
+2017-01-06  Gary Dismukes  <dismukes@adacore.com>
+
+	* s-tpobop.adb: Minor reformatting.
+
 2017-01-06  Ed Schonberg  <schonberg@adacore.com>
 
 	* checks.adb (Ensure_Valid): Do not generate a validity check
