--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,18 @@
+2017-01-06  Gary Dismukes  <dismukes@adacore.com>
+
+	* einfo.ads, sem_res.adb, sem_attr.adb, sem_ch6.adb: Minor
+	reformatting and typo fixes.
+
+2017-01-06  Bob Duff  <duff@adacore.com>
+
+	* snames.ads-tmpl: New names for pragma renaming.
+	* snames.adb-tmpl (Is_Configuration_Pragma_Name): Minor cleanup.
+	* par-prag.adb: Add new pragma name to case statement.
+	* sem_prag.adb (Rename_Pragma): Initial cut at semantic analysis
+	of the pragma.
+	* sinfo.ads, sinfo.adb (Pragma_Name_Mapped): Preparation work,
+	Dummy implementation of Pragma_Name_Mapped.
+
 2017-01-06  Ed Schonberg  <schonberg@adacore.com>
 
 	* exp_ch6.adb (Expand_Protected_Subprogram_Call): Add guard to
