--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,7 @@
 2017-01-06  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/bits/c++config (_GLIBCXX_ASSERTIONS): Avoid redefinition.
+
 	PR libstdc++/78991
 	* include/bits/predefined_ops.h (_Iter_comp_iter, _Iter_comp_val)
 	(_Val_comp_iter, _Iter_equals_val, _Iter_pred, _Iter_comp_to_val)
