--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-06  Martin Liska  <mliska@suse.cz>
+
+	PR bootstrap/79003
+	* lra-constraints.c: Rename invariant to lra_invariant.
+	* predict.c (set_even_probabilities): Initialize e to NULL.
+
 2017-01-05  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/78910
