--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-06  Nathan Sidwell  <nathan@acm.org>
+
+	* ipa-visibility.c (function_and_variable_visibility): Reformat
+	comments and long lines.  Remove extrneous if.
+	* symtab.c (symtab_node::make_decl_local): Fix code format.
+	(symtab_node::set_section_for_node): Fix comment typo.
+
 2017-01-06  Martin Liska  <mliska@suse.cz>
 
 	PR bootstrap/79003
