--- a/gcc/lto/ChangeLog
+++ b/gcc/lto/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-06  Nathan Sidwell  <nathan@acm.org>
+
+	* lto-partition.c (lto_balanced_map): Reformat/respell comment.
+	(may_need_named_section_p): Likewise.
+	(rename_statics): Likewise.
+	(lto_promote_cross_file_statics): Likewise.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
