--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-06  David Malcolm  <dmalcolm@redhat.com>
+
+	* passes.c (execute_one_pass): Split out pass-skipping logic
+	into...
+	(determine_pass_name_match): ...this new function and...
+	(should_skip_pass_p): ...this new function.
+
 2017-01-06  Nathan Sidwell  <nathan@acm.org>
 
 	* ipa-visibility.c (function_and_variable_visibility): Reformat
