--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-06  Martin Sebor  <msebor@redhat.com>
+
+	PR middle-end/78605
+	* gcc.dg/tree-ssa/pr78605.c: New test.
+
 2017-01-05  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/78910
