--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR middle-end/77484
+	* predict.def (PRED_POLYMORPHIC_CALL): Set to 58
+	* predict.c (tree_estimate_probability_bb): Reverse direction of
+	polymorphic call predictor.
+
 2017-01-06  David Malcolm  <dmalcolm@redhat.com>
 
 	* passes.c (execute_one_pass): Split out pass-skipping logic
