--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-06  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/78968
+	* crossconfig.m4: Check for __cxa_thread_atexit on *-*-freebsd*.
+	* configure: Regenerate.
+
 2017-01-06  Barrett Adair  <barrettellisadair@gmail.com>
 	    Jonathan Wakely  <jwakely@redhat.com>
 
