--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,19 @@
+2017-01-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* gcc.target/arm/acle/acle.exp: Run tests for different options
+	and make sure fat-lto-objects is used such that we can still do
+	assemble scans.
+	* gcc.target/arm/acle/cdp.c: New.
+	* gcc.target/arm/acle/cdp2.c: New.
+	* lib/target-supports.exp (check_effective_target_arm_coproc1_ok): New.
+	(check_effective_target_arm_coproc1_ok_nocache): New.
+	(check_effective_target_arm_coproc2_ok): New.
+	(check_effective_target_arm_coproc2_ok_nocache): New.
+	(check_effective_target_arm_coproc3_ok): New.
+	(check_effective_target_arm_coproc3_ok_nocache): New.
+	(check_effective_target_arm_coproc4_ok): New.
+	(check_effective_target_arm_coproc4_ok_nocache): New.
+
 2017-01-06  Martin Sebor  <msebor@redhat.com>
 
 	PR middle-end/78605
